--- a/produtos.html
+++ b/produtos.html
@@ -85,143 +85,143 @@
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
 				<div class="owl-carousel owl-theme">
-					<div><a href="#" class="itemCarousel">Todos Produtos</a></div>
-				  	<div><a href="#" class="itemCarousel">Forrageiras de Verão</a></div>
-				  	<div><a href="#" class="itemCarousel">Leguminosas</a></div>
-				  	<div><a href="#" class="itemCarousel">Forrageiras de Inverno</a></div>
+					<div><a class="itemCarousel" rel="todos">Todos Produtos</a></div>
+				  	<div><a class="itemCarousel" rel="verao">Forrageiras de Verão</a></div>
+				  	<div><a class="itemCarousel" rel="leguminosas">Leguminosas</a></div>
+				  	<div><a class="itemCarousel" rel="inverno">Forrageiras de Inverno</a></div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
 				<ul class="productsList">
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/andropogon.html">
 							<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Andropogon</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/aruana.html">
 							<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Aruana</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/llanero.html">
 							<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Llanero</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/decumbens.html">
 							<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Decumbens</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/humidicola.html">
 							<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Humidícola</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/mg-4.html">
 							<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">MG - 4</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/ruziziensis.html">
 							<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Ruziziensis</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/mg-5.html">
 							<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">MG - 5</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/batatais.html">
 							<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Batatais</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/massai.html">
 							<img src="assets/imgs/produtos/massai.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Massai</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/milheto.html">
 							<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Milheto</span>
 						</a>	
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/mombaca.html">
 							<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Mombaça</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/pensacola.html">
 							<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Pensacola</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/pojuca.html">
 							<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Pojuca</span>
 						</a>	
 					</li>
-					<li class="productsItem">
+					<li class="productsItem verao">
 						<a href="produtos/tanzania.html">
 							<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Tanzânia</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem inverno">
 						<a href="produtos/aveia-preta.html">
 							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Aveia Preta</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem inverno">
 						<a href="produtos/azevem.html">
 							<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Azevém</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem leguminosas">
 						<a href="produtos/crotalaria-juncea.html">
 							<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Crotalária Juncea</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem leguminosas">
 						<a href="produtos/estilosantes-campo-grande.html">
 							<img src="assets/imgs/produtos/estilosantes-campo-grande.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Estilozantes Campo Grande</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem leguminosas">
 						<a href="produtos/feijao-de-porco.html">	
 							<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Feijão de Porco</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem leguminosas">
 						<a href="produtos/leucena.html">
 							<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Leucena</span>
 						</a>
 					</li>
-					<li class="productsItem">
+					<li class="productsItem leguminosas">
 						<a href="produtos/mucuna-preta.html">
 							<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid imgProduct">
 							<span class="btnGreen">Mucuna Preta</span>
