--- a/produtos.html
+++ b/produtos.html
@@ -85,7 +85,7 @@
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
 				<div class="owl-carousel owl-theme">
-					<div><a class="itemCarousel" rel="todos">Todos Produtos</a></div>
+					<div><a class="itemCarousel active" rel="todos">Todos Produtos</a></div>
 				  	<div><a class="itemCarousel" rel="verao">Forrageiras de Verão</a></div>
 				  	<div><a class="itemCarousel" rel="leguminosas">Leguminosas</a></div>
 				  	<div><a class="itemCarousel" rel="inverno">Forrageiras de Inverno</a></div>
