--- a/index.html
+++ b/index.html
@@ -19,6 +19,49 @@
 </head>
 <body>
 
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light white">
+  	<a class="navbar-brand" href="index.html">
+		<img class="imgSvgLogo" src="assets/imgs/icons/white/logo-icon-white.svg">
+  	</a>
+  	<a class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+  		<span class="barraTop"></span>
+  		<span class="barraMid"></span>
+  		<span class="barraBot"></span>
+  	</a>
+
+  <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+  	<ul class="navbar-nav mr-auto">
+		<li class="nav-item active">
+	        <a class="nav-link white" href="index.html">Home</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="produtos.html">Produtos</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="contato.html">Contato</a>
+	      </li>
+	      <li class="nav-item text-center navContato">
+			<a href="mailto:duvalle@duvalle.agr.br">
+			  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
+			</a>
+			<a href="tel:+551832634272">
+			  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
+			</a>
+			<a href="https://wa.me/+5518996613390">
+			  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
+			</a>
+
+	      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
+	      </li>    
+   		</ul>
+  	</div>
+</nav> -->
+
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top white">
 	<a class="navbar-brand" href="index.html">
