--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-
+<!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-light white">
   	<a class="navbar-brand" href="index.html">
 		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg">
@@ -62,71 +62,12 @@
   	</div>
 </nav>
 
-
-<!-- Navbar -->
-<!-- <nav class="navbar navbar-expand-lg navbar-light fixed-top white">
-	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo" src="assets/imgs/icons/white/logo-icon-white.svg">
-	</a>
-	<ul class="listaNav">	
-		<li class="itemNav mudaNav">
-			<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvg">
-			</a>
-		</li>
-		<li class="itemNav mudaNav">
-			<a href="tel:+551832634272" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/phone-icon-white.svg" class="imgSvgLogo">
-			</a>
-		</li>
-		<li class="itemNav mudaNav">
-			<a href="https://wa.me/+5518996613390" class="navbarItem">
-			  	<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" class="imgSvg">
-			</a>
-		</li>
-		<li class="itemNav">
-  			<a class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-		  		<span class="barraTop"></span>
-		  		<span class="barraMid"></span>
-		  		<span class="barraBot"></span>
-		  	</a>
-		</li>
-	</ul>
-  <div id="navbarNavDropdown" class="collapse navbar-collapse">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link white" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link white" href="produtos.html">Produtos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link white" href="contato.html">Contato</a>
-      </li>
-      <li class="nav-item text-center navContato">
-		<a href="mailto:duvalle@duvalle.agr.br">
-		  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
-		</a>
-		<a href="tel:+551832634272">
-		  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
-		</a>
-		<a href="https://wa.me/+5518996613390">
-		  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
-		</a>
-
-      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
-      </li>
-    </ul>
-  </div>
-</nav> -->
-
+<!-- Home -->
 <section id="home">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12">
+			<div class="col-md-5 imgDesktop"></div>
+			<div class="col-12 col-md-7 col-sm-12">
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
@@ -137,6 +78,7 @@
 	</div>
 </section>
 
+<!-- Information -->
 <section id="information">
 	<div class="container">
 		<div class="row">
@@ -181,6 +123,7 @@
 	</div>
 </section>
 
+<!-- Footer -->
 <footer id="footer">
 	<div class="container">
 		<div class="row">
