--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-5 imgDesktop"></div>
-			<div class="col-12 col-md-7 col-sm-12">
+			<div class="col-12 col-md-7 col-sm-12 imageHomeMobile">
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
