--- a/produtos.html
+++ b/produtos.html
@@ -23,63 +23,46 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top green">
-	<a class="navbar-brand" href="index.html">
-		<img src="assets/imgs/icons/green/logo-icon.svg" class="imgSvgLogo">
-	</a>
-	<ul class="listaNav">	
-		<li class="itemNav mudaNav">
-			<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem">
+<nav class="navbar navbar-expand-lg navbar-light green">
+  	<a class="navbar-brand" href="index.html">
+		<img class="imgSvgLogo logoMobile" src="assets/imgs/logos/logo-w-text.svg">
+		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg">
+  	</a>
+  	<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+  		<span class="barraTop"></span>
+  		<span class="barraMid"></span>
+  		<span class="barraBot"></span>
+  	</a>
+
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  	<ul class="navbar-nav ml-auto">
+		<li class="nav-item active">
+	        <a class="nav-link white" href="index.html">Home</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="produtos.html">Produtos</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="contato.html">Contato</a>
+	      </li>
+	      <li class="nav-item text-center navContato">
+			<a href="mailto:duvalle@duvalle.agr.br">
 			  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
 			</a>
-		</li>
-		<li class="itemNav mudaNav">
-			<a href="tel:+551832634272" class="navbarItem">
+			<a href="tel:+551832634272">
 			  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
 			</a>
-		</li>
-		<li class="itemNav mudaNav">
-			<a href="https://wa.me/+5518996613390" class="navbarItem">
+			<a href="https://wa.me/+5518996613390">
 			  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
 			</a>
-		</li>
-		<li class="itemNav">
-			<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-			  	<span class="barraTop"></span>
-		  		<span class="barraMid"></span>
-		  		<span class="barraBot"></span>
-			</a>
-		</li>
-	</ul>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link green" href="index.html">Home</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link green" href="produtos.html">Produtos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link green" href="parceiro.html">Seja nosso parceiro</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link green" href="#">Contato</a>
-      </li>
-      <li class="nav-item text-center navContato">
-		<a href="mailto:duvalle@duvalle.agr.br">
-		  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
-		</a>
-		<a href="tel:+551832634272">
-		  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
-		</a>
-		<a href="https://wa.me/+5518996613390">
-		  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
-		</a>
 
-      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
-      </li>
-    </ul>
-  </div>
+	      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
+	      </li>    
+   		</ul>
+  	</div>
 </nav>
 
 <section id="products">
