--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 <!-- Home -->
 <section id="home">
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row" style="max-width: 100%;">
 			<div class="col-xl-5 imgDesktop"></div>
-			<div class="col-12 col-xl-7 col-lg-12 col-md-12 col-sm-12 imageHomeMobile">
+			<div class="col-12 col-md-12 col-xl-7 imageHomeMobile">
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
@@ -82,10 +82,52 @@
 <section id="information">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12 infomationDesktop">
-				
+			<div class="col-12 col-md-12 col-xl-12 infomationDesktop">
+				<div class="row">
+					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
+						<h3 style="color: #000;">Visão</h3>
+					    <p style="color: #000">
+					    	Ser referência brasileira como uma empresa de excelência em sementes para pastagem e adubação verde, que promove desenvolvimento para a sociedade rural e que as pessoas tenham orgulho de trabalhar. 
+						</p>
+					</div>
+					<div class="col-6 col-md-6 col-xl-6">
+						<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao">
+						<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
+					</div> 
+				</div>
+				<div class="row">
+					<div class="col-6 col-md-6 col-xl-6">
+					    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;">
+					    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
+					</div>
+					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
+						<h3 style="color: #000;">Missão</h3>
+					    <p style="color: #000">
+					    	Atender às necessidades do mercado de sementes, com novas tecnologias, genéticas, eficiência e integraçã, objetivando melhorar a rentabilidade dos nossos clientes. 
+					    </p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
+						<h3 style="color: #000;">Valores</h3>
+					    <p style="color: #000">
+					    	<ul style="list-style: none;margin:0;padding:0;">
+				    		<p style="color: #000">Reconhecimento de nossos colaboradores.</p>
+				    		<p style="color: #000">Ética nas relações comerciais.</p>
+				    		<p style="color: #000">Foco no relacionamento e comprometimento.</p>
+				    		<p style="color: #000">Aperfeiçõamento profissional.</p>
+				    		<p style="color: #000">Agilidade, flexibilidade e criatividade.</p>
+				    	</ul>
+					    </p>
+					</div>
+					<div class="col-6 col-md-6 col-xl-6">
+					    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
+				    <img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores">
+					</div>
+				</div>
 			</div>
-			<div class="col-12 col-md-12 col-sm-12 informationMobile">
+
+			<div class="col-12 col-md-12 col-xl-12 informationMobile">
 				<ul class="nav nav-tabs">
 				  <li class="active"><a data-toggle="tab" href="#visao" class="active">Visão</a></li>
 				  <li><a data-toggle="tab" href="#missao">Missão</a></li>
@@ -128,9 +170,9 @@
 
 <!-- Footer -->
 <footer id="footer">
-	<div class="container">
+	<div class="container footerMobile">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12">
+			<div class="col-12 col-md-12 col-xl-12">
 				<h3 class="titleFooter">Onde estamos?</h3>
 				<p class="textFooter">
 					UBS Santo Anastácio<br/>
@@ -141,14 +183,71 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 col-md-12">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="auto" height="auto" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="container footerDektop">
+		<div class="row">
+			<div class="col-6 col-md-6 col-xl-6">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			</div>
+			<div class="col-6 col-md-6 col-xl-6">
+				<h2 class="titleContent">Contato</h2>
+				<form>
+				  	<div class="form-row">
+					    <div class="form-group col-12">
+						  <label class="txtLabelForm" for="inputName">Nome</label>
+						  <input type="text" class="form-control inputDefault" id="inputName" placeholder="Maria Inc">
+						  <div class="invalid-feedback">
+					        Campo obrigatório
+					      </div>
+						</div>
+					</div>
+					<div class="form-row">
+					  	<div class="form-group col-12">
+					      	<label class="txtLabelForm" for="inputTel">Telefone</label>
+					      	<input type="tel" class="form-control inputDefault" id="inputTel" placeholder="(11)445-4534">
+					      	<div class="invalid-feedback">
+					        	Campo obrigatório
+					      	</div>
+					  	</div>
+					</div>
+				  	<div class="form-row">
+					    <div class="form-group col-12">
+					      	<label class="txtLabelForm" for="inputlEmail">E-mail</label>
+					      	<input type="email" class="form-control inputDefault" id="inputEmail" placeholder="email@email.com">
+					      	<div class="invalid-feedback">
+					        	Campo obrigatório
+					      	</div>
+					    </div>
+					</div>
+				  	<div class="form-group">
+				    	<label class="txtLabelForm" for="exampleFormControlTextarea1">Mensagem</label>
+				    	<textarea class="form-control inputDefault" id="exampleFormControlTextarea1" rows="3"></textarea>
+				  	</div>
+				  	<div class="form-group text-center">
+				  		<button type="submit" class="btnSendForm">Enviar</button>
+				  	</div>
+				</form>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 col-xl-12">
+				<h3 class="titleFooter">Onde estamos?</h3>
+				<p class="textFooter">
+					UBS Santo Anastácio<br/>
+					Rodovia Raposo Tavares, Km 596,<br/>
+					Distrito Industrial<br/>
+					Cx.postal 93<br/>
+				</p>
 			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 col-md-12 col-xl-12">
 				<ul class="footerList">
 					<li>
 						<img src="assets/imgs/logos/logo-w-text.svg">
@@ -166,7 +265,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 col-md-12 col-xl-12">
 				<p class="textFooter" style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
 					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
 					Santo Anastácio - São Paulo, Brasil
