--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid footerDektop">
-			<div class="row">
-				<div class="col-12 col-xl-12">
-					<div style="background-image: url('assets/imgs/background/footer.png'); width: 100%; height: 423px; background-repeat: no-repeat; text-align: center;"><h3 style="position: relative; top: 50%; font-size: 32px; font-weight: 700; color: #FFF;">Sua pastagem do seu jeito.</h3></div>
+	<div class="container-fluid footerDektop" style="padding: 0; margin: 0;">
+			<div class="row" style="padding: 0; margin: 0;">
+				<div class="col-12 col-xl-12" style="padding: 0; margin: 0;">
+					<div style="background-image: url('assets/imgs/background/footer.png'); width: 100%; height: 423px; background-repeat: no-repeat; text-align: center; background-size: cover;"><h3 style="position: relative; top: 50%; font-size: 32px; font-weight: 700; color: #FFF;">Sua pastagem do seu jeito.</h3></div>
 				</div>
 			</div>
 		</div>
