--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container footerDektop">
+	<div class="container footerDesktop">
 		<div class="row">
 			<div class="col-6 col-md-6 col-xl-6">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
@@ -245,7 +245,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid footerDektop" style="padding: 0; margin: 0;">
+	<div class="container-fluid footerDesktop" style="padding: 0; margin: 0;">
 		<div class="row" style="padding: 0; margin: 0;">
 			<div class="col-12 col-xl-12" style="padding: 0; margin: 0;">
 				<div style="background-image: url('assets/imgs/background/footer.png'); width: 100%; height: 423px; background-repeat: no-repeat; text-align: center; background-size: cover;">
