--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
 				</p>
 				<ul style="list-style: none;display: flex; padding: 0; margin: 0;">
 					<li style="padding: 15px 24px 35px 0px;">
-						<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;">
+						<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/green/email-icon.svg" style="width: 21px;"></a>
 					</li>
 					<li style="padding: 15px 24px 35px 0px;">
-						<img src="assets/imgs/icons/green/phone-icon.svg" style="width: 21px;">	
+						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" style="width: 21px;"></a>
 					</li>
 					<li style="padding: 15px 24px 35px 0px;">
-						<img src="assets/imgs/icons/green/email-icon.svg" style="width: 21px;">
+						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;"></a>
 					</li>
 				</ul>
 			</div>
