--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,7 @@
 <section id="partner">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12">
+			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
 				<h2 class="titleContent">Contato</h2>
 				<form>
 				  <div class="form-row">
@@ -117,7 +117,7 @@
 <footer id="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12">
+			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
 				<h3 class="titleFooter">Onde estamos?</h3>
 				<p class="textFooter">
 					UBS Santo Anastácio<br/>
@@ -128,12 +128,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="auto" height="auto" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container footerMobile">
 		<div class="row">
 			<div class="col-12">
 				<ul class="footerList">
@@ -162,6 +162,46 @@
 				<p style="color:rgba(0, 0, 0, .56); font-size: 14px; margin: 10px 0;">
 					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a><br/>
 					e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="container footerDesktop" style="margin: 76px auto 67px auto;">
+		<div class="row">
+			<div class="col-6 col-lg-6 col-xl-6">
+				<img src="assets/imgs/logos/logo-w-text.svg" style="width: 184px;">
+				<p style="color: rgba(0, 0, 0, .87);">
+					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
+					Santo Anastácio - São Paulo, Brasil
+				</p>
+				<ul style="list-style: none;display: flex; padding: 0; margin: 0;">
+					<li style="padding: 15px 24px 35px 0px;">
+						<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/green/email-icon.svg" style="width: 21px;"></a>
+					</li>
+					<li style="padding: 15px 24px 35px 0px;">
+						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" style="width: 21px;"></a>
+					</li>
+					<li style="padding: 15px 24px 35px 0px;">
+						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" style="width: 21px;"></a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-6 col-lg-6 col-xl-6">
+				<ul style="list-style: none;">
+					<li><a href="index.html" style="color: rgba(0, 0, 0, .87);">Home</a></li>
+					<li><a href="produtos.html" style="color: rgba(0, 0, 0, .57);">Produtos</a></li>
+					<li><a href="parceiro.html" style="color: rgba(0, 0, 0, .57);">Seja nosso parceiro</a></li>
+					<li><a href="contato.html" style="color: rgba(0, 0, 0, .57);">Contato</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-6 col-lg-6 col-xl-6">
+				<p style="color: rgba(0, 0, 0, .87);">Copyright &copy; 2019 DuValle</p>
+			</div>
+			<div class="col-6 col-lg-6 col-xl-6">
+				<p style="color: rgba(0, 0, 0, .87);">
+					Desenvolvido por <a href="https://www.behance.net/VictorMaloyama" class="developers" title="Victor Maloyama">Victor Maloyama</a> e <a href="https://chapabr.github.io/portfolio/" class="developers" title="Guilherme Augusto">Guilherme Augusto</a>
 				</p>
 			</div>
 		</div>
