--- a/contato.html
+++ b/contato.html
@@ -69,14 +69,14 @@
 				<h2 class="titleContent">Contato</h2>
 				<form>
 				  <div class="form-row">
-				    <div class="form-group col-md-6">
+				    <div class="form-group col-12">
 					  <label class="txtLabelForm" for="inputName">Nome</label>
 					  <input type="text" class="form-control inputDefault" id="inputName" placeholder="Maria Inc">
 					  <div class="invalid-feedback">
 				        Campo obrigatório
 				      </div>
 					</div>
-				  	<div class="form-group col-md-6">
+				  	<div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputTel">Telefone</label>
 				      <input type="tel" class="form-control inputDefault" id="inputTel" placeholder="(11)445-4534">
 				      <div class="invalid-feedback">
@@ -85,14 +85,14 @@
 				  	</div>
 				  </div>
 				  <div class="form-row">
-				    <div class="form-group col-md-6">
+				    <div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputlEmail">E-mail</label>
 				      <input type="email" class="form-control inputDefault" id="inputEmail" placeholder="email@email.com">
 				      <div class="invalid-feedback">
 				        Campo obrigatório
 				      </div>
 				    </div>
-				    <div class="form-group col-md-6">
+				    <div class="form-group col-12">
 				      <label class="txtLabelForm" for="inputCidade">Cidade</label>
 				      <input type="text" class="form-control inputDefault" id="inputCidade" placeholder="São Paulo">
 				      <div class="invalid-feedback">
